--- a/src/Patterns/readme
+++ b/src/Patterns/readme
@@ -1,2 +1,5 @@
 Пакет уроков по паттернам проектирования.
-1. Фабричный метод
+1. Фабричный метод;
+2. Абстрактная фабрика;
+3. Одиночка;
+4. Строитель;
